# multirobots_navigation

./: CMakeLists.txt  README.md  package.xml
launch/: bringup_launch.py  costmap_filter_info_launch.py  localization_launch.py  multi_tb3_simulation_launch.py  multirobots_navigation_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  tb3_simulation_launch.py
multirobots_navigation/: initial_pose.py  initialize_pose.py  navigate_to_random_pose.py  remapper.py
params/: nav2_multirobot_params_1.yaml  nav2_multirobot_params_2.yaml  nav2_params.yaml
rviz/: all_robots.rviz
scripts/: navigate_to_pose.py
worlds/: waffle.model.robot1.model  waffle.model.robot2.model
